Changes in version 0.3
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.
REMEMBER TO UPDATE -version-info BEFORE CUTTING A RELEASE!

This release adds support for Lua 5.2 while maintaining support with
Lua 5.1.  Applications using Lutok can be modified to use the new
interface in this new version and thus support both Lua releases.
However, because of incompatible changes to the Lua API, this release
of Lutok is incompatible with previous releases as well.

* New global constants: registry_index.

* New methods added to the state class: get_global_table.

* Removed global constants: globals_index.


Changes in version 0.2
======================

Released on 2012/05/30.

* New global constants: globals_index.

* New methods added to the state class: get_metafield, get_metatable,
  insert, push_value, raw_get and raw_set.

* Acknowledged that Lua 5.2 is currently not supported.


Changes in version 0.1
======================

Released on 2012/01/29.

* This is the first public release of the Lutok package.